--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
@@ -102,5 +102,13 @@
       </div>
     </div>
     <div th:include="fragments/footer :: footer"></div>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        //Inicialização do Modal excluir Evento
+        $('.modal-trigger').leanModal();
+        
+
+      });
+    </script>
   </body>
 </html>
