--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -124,6 +124,14 @@
         </div>
       </div>
     </div>
-	<div th:include="fragments/footer :: footer"></div>  
+	<div th:include="fragments/footer :: footer"></div>
+    <script type="text/javascript">
+    $(document).ready(function() {
+    	$('select').material_select();
+
+      //Inicialização do Modal excluir Evento
+      $('.modal-trigger').leanModal();
+    });
+  </script>
   </body>
 </html>
