--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_trilha.html
@@ -102,5 +102,10 @@
       </div>
     </div>
     <div th:include="fragments/footer :: footer"></div>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.modal-trigger').leanModal();
+      });
+    </script>
   </body>
 </html>
