--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -73,6 +73,136 @@
 			</div>
 		</div>
 	</div>
-	<div th:include="fragments/footer :: footer"></div>
+	<footer class="page-footer purple darken-4">
+		<div class="footer-copyright">
+			<div class="container">
+				<a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido
+					por NPI - Núcleo de Práticas em Informática</a>
+			</div>
+		</div>
+	</footer>
+	<script type="text/javascript"
+		th:src="@{/webjars/jquery/2.2.4/dist/jquery.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/webjars/materialize/0.97.6/dist/js/materialize.min.js}"></script>
+	<script type="text/javascript">
+		$(document)
+				.ready(
+						function() {
+							//Inicialização dos elementos no JS
+							//Parallax BG
+							$('.parallax').parallax();
+
+							//sideNav
+							$(".button-collapse").sideNav();
+
+							//Tooltips
+							$('.tooltipped').tooltip({
+								delay : 50
+							});
+
+							//select_initializer
+							$('select').material_select();
+
+							//datepicker
+							$('.datepicker').pickadate(
+									{
+										selectMonths : true, // Creates a dropdown to control month
+										selectYears : 15, // Creates a dropdown of 15 years to control year
+										//Persnonalizando nomes dos meses do ano
+										monthsFull : [ 'Janeiro', 'Fevereiro',
+												'Março', 'Abril', 'Maio',
+												'Junho', 'Julho', 'Agosto',
+												'Setembro', 'Outubro',
+												'Novembro', 'Dezembro' ],
+										//Persnonalizando nomes dos dias da semana
+										weekdaysFull : [ 'Domingo', 'Segunda',
+												'Terça', 'Quarta', 'Quinta',
+												'Sexta', 'Sábado' ],
+										weekdaysShort : [ 'Dom', 'Seg', 'Ter',
+												'Qua', 'Qui', 'Sex', 'Sab' ],
+										weekdaysLetter : [ 'D', 'S', 'T', 'Q',
+												'Q', 'S', 'S' ],
+										today : 'Hoje',
+										clear : 'Limpar',
+										close : 'Fechar'
+									});
+
+							//Trata as datas na tela org_editar_eventos 
+							var calendarioSubmissaoInicial = "#prazo_submissao_inicial";
+							var calendarioSubmissaoFinal = "#prazo_submissao_final";
+							var calendarioRevisaoInicial = "#prazo_revisao_inicial";
+							var calendarioRevisaoFinal = "#prazo_revisao_final";
+
+							function habilitarCalendario(calendario) {
+								$(calendario).removeAttr("disabled");
+							}
+
+							function desabilitarCalendario(calendario) {
+								$(calendario).attr("disabled", true);
+								$(calendario).pickadate("clear");
+							}
+
+							function definirDataMinimaCalendario(calendario,
+									dataMin) {
+								var picker = getPicker(calendario);
+								picker.set("min", dataMin);
+							}
+
+							function getPicker(idCalendario) {
+								var $input = $(idCalendario).pickadate();
+								var picker = $input.pickadate("picker");
+								return picker;
+							}
+
+							function configurarCalendario(idCalendarioInicial,
+									idCalendarioFinal) {
+								var picker = getPicker(idCalendarioInicial);
+								var dataAtual = picker.get();
+								var umDia = 1;
+
+								var dataMinima = new Date(dataAtual);
+								dataMinima
+										.setDate(dataMinima.getDate() + umDia);
+
+								if (dataAtual.length == 0) {
+									desabilitarCalendario(idCalendarioFinal);
+								} else {
+									habilitarCalendario(idCalendarioFinal);
+
+									definirDataMinimaCalendario(
+											idCalendarioFinal, dataMinima);
+								}
+							}
+
+							$(calendarioSubmissaoInicial).on(
+									"change",
+									function() {
+										configurarCalendario(
+												calendarioSubmissaoInicial,
+												calendarioSubmissaoFinal);
+									});
+
+							$(calendarioSubmissaoFinal).on(
+									"change",
+									function() {
+										configurarCalendario(
+												calendarioSubmissaoFinal,
+												calendarioRevisaoInicial);
+									});
+
+							$(calendarioRevisaoInicial).on(
+									"change",
+									function() {
+										configurarCalendario(
+												calendarioRevisaoInicial,
+												calendarioRevisaoFinal);
+									});
+
+							//Inicialização do Modal excluir Evento
+							$('.modal-trigger').leanModal();
+
+						});
+	</script>
 </body>
 </html>
