Refatoração do css da timeline e dos card das timeline.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -45,7 +45,7 @@
        	</div>
         <div >
           <div class="col s12">
-            <div class="card horizontal small">
+            <div class="card horizontal">
               <div class="card-stacked">
                 <div class="card-content" th:if="${evento.prazoSubmissaoInicial}">
                   <section class="cd-horizontal-timeline">
