Adicionado label datas importantes, para detalhes do evento.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -49,6 +49,7 @@
               <div class="card-stacked">
                 <div class="card-content" th:if="${evento.prazoSubmissaoInicial}">
                   <section class="cd-horizontal-timeline">
+				  	<span class="card-title">Datas importantes</span>
 				  	<div class="timeline">
 						<div class="events-wrapper">
 							<div class="events">
