--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -5,6 +5,9 @@
 	<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 	<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
 	<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+	<meta name="_csrf" th:content="${_csrf.token}"/>
+	<!-- default header name is X-CSRF-TOKEN -->
+	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body>
 	<div th:fragment="header">
@@ -23,11 +26,11 @@
 				   <div class="right">  
 					<a class='dropdown-button btn' href='#' data-activates='dropdown1' th:text="|Notificações (${#arrays.length(notificacoes)})|"></a>
 					 <ul id='dropdown1' class='dropdown-content collection '>
-					     <div th:each="notificacoes : ${notificacoes}" >
-						     <li class="collection-item dismissable left ">
-							      <span class="title center" th:text="${notificacoes.titulo}"></span>
-							      <p th:text="${notificacoes.descricao}"></p>
-						     </li>
+					     <div th:each="notificacao : ${notificacoes}" >
+					     	<li class="collection-item dismissable left " th:id="${notificacao.id}" onclick="removerNotificacao(this)">
+						      <span class="title center" th:text="${notificacao.titulo}"></span>
+						      <p th:text="${notificacao.descricao}"></p>
+					     	</li>
 					    </div>
 					  </ul>
 			      <ul id="nav-mobile" class="side-nav">
