Bugfix editar eventos ativos Bugfix reenviar trabalho fora do prazo de submissão

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -40,7 +40,7 @@
               	  <div class="row">
               	  
 	              	  <div class="col m4 s4">
-	              	  	<a href="#" class="purple-text">Inativar</a>
+	              	  	<a th:href="@{'/eventoOrganizador/editar/' + ${evento.id}}" class="purple-text">Editar</a>
 	              	  </div>
 	              	  <div class="col m4 s4">
 	              	  	<a th:attr="href='#modal' + ${evento.id}" 
