-Criando head, e incluindo em todas as paginas

--- a/aplicacao/contest/src/main/resources/templates/login.html
+++ b/aplicacao/contest/src/main/resources/templates/login.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Contest - Controle de Eventos de Submissão</title>
-
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
-</head>
+  <div th:include="fragments/head :: head"></div></head>
 <body>
   <nav class="purple darken-4" role="navigation">
     <div class="nav-wrapper container">
