-Finalizada funcionalidade notificacao e fragmentação do javaScript

--- a/aplicacao/contest/src/main/resources/templates/fragments/head.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/head.html
@@ -11,6 +11,7 @@
 		<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 		<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
 		<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+		<link th:href="@{/css/time-line-style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 		<meta name="_csrf" th:content="${_csrf.token}"/>
 		<!-- default header name is X-CSRF-TOKEN -->
 		<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
