--- a/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
@@ -96,23 +96,8 @@
         </div>
       </div>
     </div>
-    <footer class="page-footer purple darken-4">
-      <div class="footer-copyright">
-        <div class="container"><a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido por NPI - Núcleo de Práticas em Informática</a></div>
-      </div>
-    </footer>
-    <script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/dist/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/materialize/0.97.6/dist/js/materialize.min.js}"></script>
+    <div th:include="fragments/footer :: footer"></div>
     <script type="text/javascript" th:src="@{/js/modernizr.js}"></script>
     <script type="text/javascript" th:src="@{/js/timeline.main.js}"></script>
-    
-    <script type="text/javascript">
-      $(document).ready(function(){
-
-        //Inicialização do Modal excluir Evento
-        $('.modal-trigger').leanModal();
-        
-      });
-    </script>
   </body>
 </html>
