Adicionado método para retornar quantdade de trabalhos por evento.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -125,7 +125,7 @@
               <div class="card-stacked">
                 <div class="card-content">
                   <span class="card-title">Trabalhos</span>
-                  <p th:text="'Submetidos: '+ ${qtdTrilhas}"></p>
+                  <p th:text="'Submetidos: '+ ${numeroTrabalhos}"></p>
                   <p th:text="'Revisados: '+ ${qtdTrilhas}"></p>
                   <p th:text="'Não Revisados: '+ ${qtdTrilhas}"></p>
                 </div>
