--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -126,8 +126,8 @@
                 <div class="card-content">
                   <span class="card-title">Trabalhos</span>
                   <p th:text="'Submetidos: '+ ${numeroTrabalhos}"></p>
-                  <p th:text="'Revisados: '+ ${qtdTrilhas}"></p>
-                  <p th:text="'Não Revisados: '+ ${qtdTrilhas}"></p>
+                  <p th:text="'Revisados: '+ ${numeroTrabalhosRevisados}"></p>
+                  <p th:text="'Não Revisados: '+ ${numeroTrabalhosNaoRevisados}"></p>
                 </div>
                 <div class="card-action" th:if="${organizaEvento}">
                   <a href="#" class="btn white-text waves-effect waves-light blue-grey">Gerenciar Trabalhos</a>
