Adicionado método para contar comentários das revisões.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -140,7 +140,7 @@
               <div class="card-stacked">
                 <div class="card-content">
                   <span class="card-title">Revisões</span>
-                  <p th:text="'Comentáios: '+ ${qtdTrilhas}"></p>
+                  <p th:text="'Comentadas: '+ ${comentarios}"></p>
                   <br /><br />
                 </div>
                 <div class="card-action" th:if="${organizaEvento}">
