--- a/aplicacao/contest/src/main/resources/templates/autor/autor_revisao.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_revisao.html
@@ -16,97 +16,111 @@
     <div class="container page"><br/>
       <div th:include="fragments/autor_menu_navegacao :: autor_menu_navegacao"></div>
       
-      <h4 th:text="'Revisão - ' + ${titulo}"></h4>
-      <div class="row">
-        <div class="col m6 s6">
-          <div>
-            <h5 th:text="'Originalidade: ' + ${originalidade}"></h5>
-            <div class="progress">
-              <div style="width: 20%" class="determinate"></div>
-            </div>
-            <p>
-              Tema atual e inovador, contribuição científica clara (quando tiver resultados),
-              abordagem ou solução inovadora.
-            </p>
-          </div>
-          <div>
-            <h5 th:text="'Clareza: ' + ${clareza}"></h5>
-            <div class="progress">
-              <div style="width: 40%" class="determinate"></div>
-            </div>
-            <p>
-              Organização do texto, separação e ordenação das seções para os artigos, 
-              fluxo de ideias coerente, conclusões sobre o trabalho claras e possíveis 
-              dadas as premissas, bom uso de figuras/tabelas/exemplos.      
-            </p>
-          </div>
-          <div>
-            <h5 th:text="'Relevância: ' + ${relevancia}"></h5>
-            <div class="progress">
-              <div style="width: 60%" class="determinate"></div>
-            </div>
-            <p>Relevância do tema abordado no artigo ou resumo.</p>
-          </div>
-          <div>
-            <h5 th:text="'Merito Técnico: ' + ${merito}"></h5>
-            <div class="progress">
-              <div style="width: 80%" class="determinate"></div>
-            </div>
-            <p>
-              Motivação, fundamentação teórica, metodologia. Para trabalhos que apresentam 
-              resultados, avaliar a aquisição e conclusões acerca dos resultados encontrados.
-              Para trabalhos em andamento, avaliar os resultados esperados e o alcance dos 
-              resultados dado os objetivos de pesquisa e experimentos propostos.       
-            </p>
-          </div>
-          <div>
-            <h5 th:text="'Qualidade do Texto: ' + ${qualidade}"></h5>
-            <div class="progress">
-              <div style="width: 100%" class="determinate"></div>
-            </div>
-            <p>
-              Redação do texto adequada: respeito pelas normas, bibliografia, 
-              redação correta em Português/Inglês. Respeito pela formatação 
-              especificada pelo edital (tamanho de fonte, espaçamento, tamanho máximo e mínimo).
-            </p>
-          </div>
-        </div>
-        <div class="col m6 s6">
-          <div>
-            <h5>Comentários do Revisor:</h5>
-            <div class="progress">
-              <div style="width: 60%" class="determinate"></div>
-            </div>
-            <p th:text="${comentarios_autores}">
-              O artigo está muito bem escrito, bem claro e objetivo. No entanto, a contribuição 
-              do artigo baseia-se fortemente do resultado de outros trabalhos, já que durante o 
-              trabalho não foram realizadas simulações. Os resultados obtidos pelos autores da 
-              simulação podem ser explicado mais detalhadamente, visto que é a parte mais 
-              importante do artigo. No mais, a realização por parte do autor de simulações 
-              envolvendo os protocolos citados trariam grande valia a trabalho.
-            </p>
-          </div>
-          <div>
-            <h5 th:text="'Avaliação geral: ' + ${avaliacao_geral}"></h5>
-            <div class="progress">
-              <div style="width: 60%" class="determinate"></div>
-            </div>
-            <p>
-              Avaliação global do artigo. A nota final será obtida a partir dos quesitos: 
-              originalidade, mérito técnico, clareza, qualidade e relevância. A avaliação 
-              geral, assim como a auto-avaliação, servirá como critério para um eventual desempate.    
-            </p>
-          </div>
-          <div>
-            <h5 th:text="'Status: ' + ${avaliacao_final}"></h5>
-            <div class="progress">
-              <div style="width: 60%" class="determinate"></div>
-            </div>
-            
-          </div>
-        </div>
-      </div>
+      <h4 th:text="'Revisão - ' + ${titulo} "></h4>
+
+	<div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s3"  th:each="revisao,iterStat : ${revisoes}"><a class="teal-text" th:href="'#revisao' + ${iterStat.count}" th:text="'Revisao '+ ${iterStat.count}"></a></li>
+      </ul>
     </div>
+    
+    <div th:each="revisao,iterStat : ${revisoes}">
+    	<div th:id="'revisao'+ ${iterStat.count}" class="col s12">
+    	
+    		<p th:text="'revisao'+ ${iterStat.count}"></p>
+       <div class="col m6 s6">
+         <div>
+           <h5 th:text="'Originalidade: ' + ${revisao.originalidade}"></h5>
+           <div class="progress">
+             <div style="width: 20%" class="determinate"></div>
+           </div>
+           <p>
+             Tema atual e inovador, contribuição científica clara (quando tiver resultados),
+             abordagem ou solução inovadora.
+           </p>
+         </div>
+         <div>
+           <h5 th:text="'Clareza: ' + ${revisao.clareza}"></h5>
+           <div class="progress">
+             <div style="width: 40%" class="determinate"></div>
+           </div>
+           <p>
+             Organização do texto, separação e ordenação das seções para os artigos, 
+             fluxo de ideias coerente, conclusões sobre o trabalho claras e possíveis 
+             dadas as premissas, bom uso de figuras/tabelas/exemplos.      
+           </p>
+         </div>
+         <div>
+           <h5 th:text="'Relevância: ' + ${revisao.relevancia}"></h5>
+           <div class="progress">
+             <div style="width: 60%" class="determinate"></div>
+           </div>
+           <p>Relevância do tema abordado no artigo ou resumo.</p>
+         </div>
+         <div>
+           <h5 th:text="'Merito Técnico: ' + ${revisao.merito}"></h5>
+           <div class="progress">
+             <div style="width: 80%" class="determinate"></div>
+           </div>
+           <p>
+             Motivação, fundamentação teórica, metodologia. Para trabalhos que apresentam 
+             resultados, avaliar a aquisição e conclusões acerca dos resultados encontrados.
+             Para trabalhos em andamento, avaliar os resultados esperados e o alcance dos 
+             resultados dado os objetivos de pesquisa e experimentos propostos.       
+           </p>
+         </div>
+         <div>
+           <h5 th:text="'Qualidade do Texto: ' + ${revisao.qualidade}"></h5>
+           <div class="progress">
+             <div style="width: 100%" class="determinate"></div>
+           </div>
+           <p>
+             Redação do texto adequada: respeito pelas normas, bibliografia, 
+             redação correta em Português/Inglês. Respeito pela formatação 
+             especificada pelo edital (tamanho de fonte, espaçamento, tamanho máximo e mínimo).
+           </p>
+         </div>
+       </div>
+       <div class="col m6 s6">
+         <div>
+           <h5>Comentários do Revisor:</h5>
+           <div class="progress">
+             <div style="width: 60%" class="determinate"></div>
+           </div>
+           <p th:text="${revisao.comentarios_autores}">
+             O artigo está muito bem escrito, bem claro e objetivo. No entanto, a contribuição 
+             do artigo baseia-se fortemente do resultado de outros trabalhos, já que durante o 
+             trabalho não foram realizadas simulações. Os resultados obtidos pelos autores da 
+             simulação podem ser explicado mais detalhadamente, visto que é a parte mais 
+             importante do artigo. No mais, a realização por parte do autor de simulações 
+             envolvendo os protocolos citados trariam grande valia a trabalho.
+           </p>
+         </div>
+         <div>
+           <h5 th:text="'Avaliação geral: ' + ${revisao.avaliacao_geral}"></h5>
+           <div class="progress">
+             <div style="width: 60%" class="determinate"></div>
+           </div>
+           <p>
+             Avaliação global do artigo. A nota final será obtida a partir dos quesitos: 
+             originalidade, mérito técnico, clareza, qualidade e relevância. A avaliação 
+             geral, assim como a auto-avaliação, servirá como critério para um eventual desempate.    
+           </p>
+         </div>
+         <div>
+           <h5 th:text="'Status: ' + ${revisao.avaliacao_final}"></h5>
+           <div class="progress">
+             <div style="width: 60%" class="determinate"></div>
+           </div>
+           
+         </div>
+       </div>
+    	</div>
+    	</div>
+    </div>
+  </div>
+
     <footer class="page-footer purple darken-4">
       <div class="footer-copyright">
         <div class="container"><a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido por NPI - Núcleo de Práticas em Informática</a></div>
@@ -202,6 +216,9 @@
         //Inicialização do Modal excluir Evento
         $('.modal-trigger').leanModal();
         
+       $('ul.tabs').tabs();
+        
+  
       });
     </script>
   </body>
