--- a/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/organizador_meus_eventos.html
@@ -75,7 +75,7 @@
 								<em>Começa o período de submissão dos artigos</em>
 							</li>
 							<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')}">
-								<em>Terminou o periodo de subissão, hora de começar as Revisões</em>
+								<em>Terminou o periodo de submissão inicial, hora de começar as Revisões</em>
 							</li>
 				
 							<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')}">
