--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
@@ -25,7 +25,7 @@
          <div th:each="evento : ${eventosAtivos}" class="col m6 s6">
           <div class="card">
             <div class="card-content"><span class="card-title" th:text="${evento.nome}" ></span>
-              <p th:text="|Organizador: ${evento.participacoes[0].pessoa.nome}|"></p>
+    		  <div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${evento.organizadores})"></div>
               <p th:text="|Visibilidade: ${evento.visibilidade.visibilidade}|"></p>
             </div>
             <div class="card-action"><a href="#" class="btn white-text waves-effect waves-light blue-grey">Inativar</a></div>
@@ -48,8 +48,9 @@
             <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
           </ul>
         </div>
+-->        
       </div>
- -->
+ 
       
     </div>
     <div th:include="fragments/footer :: footer"></div>
