--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
@@ -47,7 +47,7 @@
          <div th:each="evento : ${eventosInativos}" class="col m6 s12">
           <div class="card">
             <div class="card-content"><span class="card-title" th:text="${evento.nome}"></span>
-              <p th:text="|Organizador: ${evento.participacoes[0].pessoa.nome}|"></p>
+              <div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${evento.organizadores})"></div>
               <p th:text="|Visibilidade: ${evento.visibilidade.visibilidade}|"></p>
             </div>
             <div class="card-action">
