--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -45,7 +45,7 @@
           <div class="card">
               
             <div class="card-content"><span class="card-title" th:text="${eventoOrganizo.nome}"></span>
-              <p th:text="|Organizador: ${eventoOrganizo.participacoes[0].pessoa.nome}|"></p>
+              <div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${evento.organizadores})"></div>
               <p th:text="|Visibilidade: ${eventoOrganizo.visibilidade.visibilidade}|"></p>
             </div>
             <div class="card-action">
