--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -49,10 +49,7 @@
 						<div class="card-stacked">
 							<div class="card-content">
 								<span class="card-title" th:text="${trabalho.titulo}"></span>
-								<p>Revisor(es): </p>
-								<blockquote>
-	              					<p th:each="participacao : ${trabalho.participacoes}" th:if="${#strings.equalsIgnoreCase(participacao.papel, 'REVISOR')}" th:text="|${participacao.pessoa.nome}|"></p>	
-	              				</blockquote>
+								<div th:include="fragments/listar_participacoes :: listar('Revisor(es):', ${trabalho.revisores})"></div>
 								<h6 th:text="'Trilha: ' + ${trabalho.trilha.nome}"></h6>
 							</div>
 							<div class="card-action" th:switch="${#lists.contains(trabalhosRevisados, trabalho.id)}">
