--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
@@ -13,7 +13,9 @@
   <body>
     <div th:include="fragments/header :: header"></div>
     <div class="container page"><br/>
-      <div class="row opcoes"><a th:href="@{/revisor}">Eventos Ativos</a></div>
+    <!-- 
+      <div class="row opcoes"><a th:href="@{/revisor/{id}/trabalhoRevisao(id=${trabalho.evento.id})}">Eventos Ativos</a></div>
+    -->
       <div class="row">
         <h1 th:text="${nomeEvento}"></h1>
         <div>
@@ -26,11 +28,9 @@
         </div>
         <div>
           <div class="col s12 card">
-            <div class="card-content"><span class="card-title" th:text="${trabalho.titulo}">Titulo do trabalho</span>
-              <p>Autores: </p>
-              <ul class="collection" th:if="${not #lists.isEmpty(trabalho.autoresDoTrabalho)}">
-      			<li th:each="autor : ${trabalho.autoresDoTrabalho}" th:text="${autor.nome}" class="collection-item" >Nome Autor</li>
-    		  </ul>
+            <div class="card-content">
+            	<span class="card-title" th:text="${trabalho.titulo}">Titulo do trabalho</span>
+            	<div th:include="fragments/listar_participacoes :: listar('Autor(es):', ${trabalho.autoresDoTrabalho})"></div>
             </div>
             <div class="card-action">
               <a id="baixar-trabalho" th:href="@{'/revisor/trabalho/' + ${trabalho.id}}" name="baixar-trabalho" class="btn waves-effect waves-light white-text">Fazer Download do Trabalho<i aria-hidden="true" class="fa fa-download left"></i></a>
